k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-api-gateway-deployment
  labels:
    app: ts-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ts-api-gateway
  template:
    metadata:
      labels:
        app: ts-api-gateway
    spec:
      containers:
        - name: ts-api-gateway
          image: subhankarm2312/ts-api-gateway # CORRECTED: Placeholder name now matches ci.yml
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
