k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ts-api-gateway
spec:
  type: LoadBalancer
  selector:
    app: ts-api-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
