k8s/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-api-gateway-ingress-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://dev.tinystepscdc.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization,Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - dev.tinystepscdc.com
    secretName: dev-tinystepscdc-tls
  rules:
  - host: dev.tinystepscdc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ts-api-gateway
            port:
              number: 8080
